--- a/package.json
+++ b/package.json
@@ -5,8 +5,10 @@
   "main": "server/index.js",
   "scripts": {
     "client": "cd client && yarn start",
-    "server": "nodemon server.js",
-    "dev": "concurrently --kill-others-on-fail \"yarn server\" \"yarn client\""
+    "server": "nodemon server/index.js",
+    "dev": "concurrently --kill-others-on-fail \"yarn server\" \"yarn client\"",
+    "start": "node server/index.js",
+    "heroku-postbuild": "cd client && yarn && yarn build"
   },
   "keywords": [],
   "author": "",
@@ -17,5 +19,8 @@
   },
   "devDependencies": {
     "concurrently": "^4.1.0"
+  },
+  "engines": {
+    "node": "11.x"
   }
 }
