--- a/package.json
+++ b/package.json
@@ -5,9 +5,9 @@
   "main": "server/index.js",
   "scripts": {
     "client": "cd client && yarn start",
-    "server": "nodemon server/index.js",
+    "server": "nodemon --experimental-modules server/index.mjs",
     "dev": "concurrently --kill-others-on-fail \"yarn server\" \"yarn client\"",
-    "start": "node server/index.js",
+    "start": "node --experimental-modules server/index.mjs",
     "heroku-postbuild": "cd client && yarn && yarn build"
   },
   "keywords": [],
